--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/cheerio": "^0.22.31",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/node-fetch": "^2.6.1",
     "cheerio": "^1.0.0-rc.10",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "flatted": "^3.2.5",
     "puppeteer": "^13.7.0"
